finished js and dom manipulation

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -36,6 +36,6 @@
         often used in control structures like loops and conditional statements.
       </li>
     </ul>
-    <script src="operators.js"></script>
+    <script src="arrays.js"></script>
 </body>
 </html>
